--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@anthropic-ai/sdk": "^0.18.0",
     "@apidevtools/json-schema-ref-parser": "^11.1.0",
     "@azure/openai": "^1.0.0-beta.8",
+    "@google-cloud/translate": "^8.2.0",
     "@google/generative-ai": "^0.1.3",
     "@hookform/resolvers": "^3.3.2",
     "@mistralai/mistralai": "^0.0.8",
@@ -64,6 +65,7 @@
     "@tabler/icons-react": "^2.40.0",
     "@vercel/analytics": "^1.1.1",
     "@vercel/edge-config": "^0.4.1",
+    "@vitalets/google-translate-api": "^9.2.0",
     "@xenova/transformers": "^2.13.4",
     "ai": "^2.2.31",
     "class-variance-authority": "^0.7.0",
